--- a/app/src/main/res/layout/item_rcv_sach.xml
+++ b/app/src/main/res/layout/item_rcv_sach.xml
@@ -70,19 +70,19 @@
                 android:textColor="@color/primary"
                 android:text="TextView" />
 
-<!--           <LinearLayout-->
-<!--               android:id="@+id/btnSetTrangSach"-->
-<!--               android:layout_width="wrap_content"-->
-<!--               android:layout_height="wrap_content">-->
-<!--               <TextView-->
-<!--                   android:textStyle="bold"-->
-<!--                   android:id="@+id/tvTrangSach"-->
-<!--                   android:textColor="@color/primary"-->
-<!--                   android:layout_width="wrap_content"-->
-<!--                   android:layout_height="wrap_content"-->
-<!--                   android:layout_margin="5dp"-->
-<!--                   android:text="TextView" />-->
-<!--           </LinearLayout>-->
+           <LinearLayout
+               android:id="@+id/btnSetSoLuong"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+               <TextView
+                   android:textStyle="bold"
+                   android:id="@+id/tvSoLuong"
+                   android:textColor="@color/primary"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="5dp"
+                   android:text="TextView" />
+           </LinearLayout>
 
             <TextView
 
