--- a/app/src/main/res/layout/item_rcv_thanhvien.xml
+++ b/app/src/main/res/layout/item_rcv_thanhvien.xml
@@ -80,14 +80,14 @@
                 android:layout_margin="5dp"
                 android:text="TextView" />
 
-<!--            <TextView-->
-<!--                android:textStyle="bold"-->
-<!--                android:id="@+id/tvTienTV"-->
-<!--                android:textColor="@color/primary"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:text="TextView" />-->
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/tvSoTK"
+                android:textColor="@color/primary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="TextView" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
